# Rlot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: code_style.yml
cmd/: cli.py
lib/: utils.py
lib/arg_parser/: consts.py  default_configs.py  parser.py  utils.py
lib/drawer/: painter.py  painterGraph.py
lib/logger/: bdev_logger.py  logger.py  mdadm_logger.py  spdk_logger.py
resources/: bdev.ini  conf.fio  default_bdev.ini  default_mdadm.ini  default_spdk.ini  raid5.ini  spdk_raid0.ini  test.ini
rlot/: __main__.py
rlot/rlotlib/: MdadmGenerate.py  checks.py  parsingFile.py
rlot_app/: __init__.py  __main__.py
rlot_app/rlotlib/: checks.py  defaultFio.py  generateFio.py  mdadmGenerate.py  painterGraph.py  parseIni.py  parsingFile.py  preparationForWork.py  runFio.py
