[project]
name = "rlot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PavlushaSource", email = "pavlushkin.dima1785@gmail.com" }
]
dependencies = [
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rlot"]
